horysontal_scrolhorizontal scrolling fixedl

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,5 +1,6 @@
 html,
 body {
+  overflow-x: auto;
   margin: 0;
   padding: 0;
 }
